--- a/Dockerfile3
+++ b/Dockerfile3
@@ -1,5 +1,5 @@
 FROM registry.cn-beijing.aliyuncs.com/hub-mirrors/alpine
-COPY output/chatroot /usr/local/bin/chatroot
+COPY output/chatroot /app/chatroot
 LABEL MAINTAINER yunlong <zhenmu.zyl@alibaba-inc.com>
 
-CMD ["chatroot"]
+CMD ["/app/chatroot"]
